--- a/rqt_controller_manager/plugins/plugin.xml
+++ b/rqt_controller_manager/plugins/plugin.xml
@@ -5,6 +5,11 @@
         Visual interface for managing ROS controllers.
     </description>
     <qtgui>
+      <group>
+        <label>Robot Tools</label>
+        <icon type="theme">folder</icon>
+        <statustip>Plugins related to robot tools.</statustip>
+      </group>
       <label>Controller Manager</label>
       <icon type="file">images/cm_icon.png</icon>
       <statustip>Manage ROS controllers</statustip>
