Add Python helpers to make life easier.
- Helper for getting all active controller managers.

- Helper for determining if a namespace contains the controller manager ROS API.

- Helpers for filtering the output of the 'list_controllers' service by
  type, name, state, hardware_interface and claimed resources.

--- a/controller_manager_msgs/CMakeLists.txt
+++ b/controller_manager_msgs/CMakeLists.txt
@@ -4,6 +4,8 @@ project(controller_manager_msgs)
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 
+catkin_python_setup()
+
 # Add message and service files
 add_message_files(
   FILES
