Add hardware_interface to CATKIN_DEPENDS.

--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -40,6 +40,7 @@ else() # catkin
   catkin_package(
     CATKIN_DEPENDS 
       roscpp
+      hardware_interface
     INCLUDE_DIRS
       include
       ${catkin_INCLUDE_DIRS}
