--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -5,7 +5,6 @@ find_package(urdfdom REQUIRED)
 
 find_package(catkin REQUIRED
   roscpp
-  rostest
   hardware_interface
 )
 
@@ -31,6 +30,7 @@ catkin_package(
 )
 
 if(CATKIN_ENABLE_TESTING)
+  find_package(rostest)
   catkin_add_gtest(joint_limits_interface_test test/joint_limits_interface_test.cpp)
   target_link_libraries(joint_limits_interface_test
     ${catkin_LIBRARIES}
