make rostest in CMakeLists optional (ros/rosdistro#3010)

--- a/controller_manager_tests/CMakeLists.txt
+++ b/controller_manager_tests/CMakeLists.txt
@@ -29,7 +29,7 @@ if(USE_ROSBUILD)
 else()
 
   # Load catkin and all dependencies required for this package
-  find_package(catkin REQUIRED COMPONENTS rostest controller_manager controller_interface control_toolbox)
+  find_package(catkin REQUIRED COMPONENTS controller_manager controller_interface control_toolbox)
 
   include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
 
@@ -54,6 +54,7 @@ else()
   target_link_libraries(dummy_app ${PROJECT_NAME} ${catkin_LIBRARIES})
 
   if(CATKIN_ENABLE_TESTING)
+    find_package(rostest)
     add_executable(cm_test test/cm_test.cpp)
     add_dependencies(tests cm_test)
     target_link_libraries(cm_test ${GTEST_LIBRARIES} ${catkin_LIBRARIES})
