--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -25,7 +25,6 @@ else() # catkin
 
   find_package(catkin REQUIRED
     roscpp
-    rostest
     hardware_interface
     urdfdom
   )
@@ -49,6 +48,8 @@ else() # catkin
   )
 
   if(CATKIN_ENABLE_TESTING)
+    find_package(rostest)
+
     catkin_add_gtest(joint_limits_interface_test test/joint_limits_interface_test.cpp)
     target_link_libraries(joint_limits_interface_test ${catkin_LIBRARIES})
 
