--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -2,7 +2,7 @@
   <name>controller_manager_tests</name>
   <version>0.9.0</version>
   <description>controller_manager_tests</description>
-  <maintainer email="vijay@hidof.com">Vijay Pradeep</maintainer>
+  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
 
   <license>BSD</license>
 
