--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -11,6 +11,7 @@
   <url type="repository">https://github.com/ros-controls/ros_control</url>
 
   <author>Vijay Pradeep</author>
+  <author>Adolfo Rodriguez Tsouroukdissian</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
