rqt_cm: Multi-interface controllers, UI revamp
- Make the rqt_controller_manager aware of multi-interface controllers.

- Reduce the amount of screen real-estate used by the plugin. Controller
  information that was previously shown in the plugin widget has been
  deferred to a pop-up that appears when double-clicking a controller.

- Make main view read-only. To affect the state of available controllers
  (load, unload,start, stop), one must take explicit action: right-click
  context menu. This was already so to a certain exxtent, but you could
  still load and start uninitialized controllers from the main view.

- Show uninitialized controllers (fetched from parameter server) in the same
  list as stopped and running controllers.

- Make less assumptions when finding running controller managers. Use
  existing helpers on controller_mamager_msgs.utils Python module.

--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -5,6 +5,7 @@
   <description>The rqt_controller_manager package</description>
 
   <maintainer email="kphawkins@gatech.edu">Kelsey Hawkins</maintainer>
+  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</maintainer>
 
   <license>BSD</license>
 
@@ -13,6 +14,7 @@
   <url type="repository">https://github.com/ros-controls/ros_control</url>
 
   <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
+  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -23,6 +25,6 @@
   <run_depend>rqt_gui</run_depend>
 
   <export>
-    <rqt_gui plugin="${prefix}/plugins/plugin.xml" />
+    <rqt_gui plugin="${prefix}/plugin.xml" />
   </export>
 </package>
