--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,4 @@ before_script: # Use this to prepare your build for testing e.g. copy database c
   - export PYTHONPATH=/usr/lib/python2.7/dist-packages:$PYTHONPATH
   - source /opt/ros/$ROS_DISTRO/setup.bash  
 script: # All commands must exit with code 0 on success. Anything else is considered failure.
-  - catkin_make -j2 --cmake-args -Wno-dev
+  - catkin_make -j2
