--- a/joint_limits_interface/CMakeLists.txt
+++ b/joint_limits_interface/CMakeLists.txt
@@ -21,11 +21,8 @@ catkin_package(
     hardware_interface
   INCLUDE_DIRS
     include
-    ${catkin_INCLUDE_DIRS}
-    ${urdfdom_INCLUDE_DIRS}
-  LIBRARIES
-    ${catkin_LIBRARIES}
-    ${urdfdom_LIBRARIES}
+  DEPENDS
+    urdfdom
 )
 
 if(CATKIN_ENABLE_TESTING)
