--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -87,9 +87,17 @@ install(FILES ros_control_plugins.xml
 #############
 
 if(CATKIN_ENABLE_TESTING)
+
+  find_package(Boost REQUIRED COMPONENTS system thread)
+
   catkin_add_gtest(simple_transmission_test           test/simple_transmission_test.cpp)
+  target_link_libraries(simple_transmission_test ${Boost_LIBRARIES})
+
   catkin_add_gtest(differential_transmission_test     test/differential_transmission_test.cpp)
+  target_link_libraries(differential_transmission_test ${Boost_LIBRARIES})
+
   catkin_add_gtest(four_bar_linkage_transmission_test test/four_bar_linkage_transmission_test.cpp)
+  target_link_libraries(four_bar_linkage_transmission_test ${Boost_LIBRARIES})
 
   catkin_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
   target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${TinyXML_LIBRARIES})
