--- a/ros_control/package.xml
+++ b/ros_control/package.xml
@@ -1,7 +1,7 @@
 <package>
   <name>ros_control</name>
   <version>0.10.0</version>
-  <description>A set of packages that include controller interfaces, controller managers, transmissions, hardware_interfaces and the control_toolbox.</description>
+  <description>A set of packages that include controller interfaces, controller managers, transmissions and hardware_interfaces.</description>
 
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
   <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
@@ -24,7 +24,6 @@
   <run_depend>hardware_interface</run_depend>
   <run_depend>controller_manager_tests</run_depend>
   <run_depend>controller_manager_msgs</run_depend>
-  <run_depend>control_toolbox</run_depend>
 
   <export>
     <metapackage/>
