--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -21,6 +21,7 @@
   <run_depend>rostest</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>controller_interface</run_depend>
+  <test_depend>rosservice</test_depend>
 
   <export>
     <controller_interface plugin="${prefix}/test_controllers_plugin.xml"/>
