--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(catkin REQUIRED COMPONENTS
   hardware_interface
   cmake_modules
   pluginlib
-  resource_retriever
   roscpp
 )
 
@@ -24,7 +23,6 @@ catkin_package(
   DEPENDS
     TinyXML
     pluginlib
-    resource_retriever
     roscpp
 )
 
@@ -89,6 +87,7 @@ install(FILES ros_control_plugins.xml
 if(CATKIN_ENABLE_TESTING)
 
   find_package(Boost REQUIRED COMPONENTS system thread)
+  find_package(catkin REQUIRED COMPONENTS resource_retriever roscpp)
 
   catkin_add_gtest(simple_transmission_test           test/simple_transmission_test.cpp)
   target_link_libraries(simple_transmission_test ${Boost_LIBRARIES})
@@ -100,21 +99,22 @@ if(CATKIN_ENABLE_TESTING)
   target_link_libraries(four_bar_linkage_transmission_test ${Boost_LIBRARIES})
 
   catkin_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
-  target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${TinyXML_LIBRARIES})
+  target_link_libraries(transmission_interface_test ${TinyXML_LIBRARIES} ${catkin_LIBRARIES})
 
   catkin_add_gtest(transmission_parser_test test/transmission_parser_test.cpp)
-  target_link_libraries(transmission_parser_test ${PROJECT_NAME}_parser)
+  target_link_libraries(transmission_parser_test ${PROJECT_NAME}_parser ${catkin_LIBRARIES})
 
   catkin_add_gtest(simple_transmission_loader_test test/simple_transmission_loader_test.cpp)
-  target_link_libraries(simple_transmission_loader_test ${PROJECT_NAME}_parser)
+  target_link_libraries(simple_transmission_loader_test ${PROJECT_NAME}_parser ${catkin_LIBRARIES})
 
   catkin_add_gtest(differential_transmission_loader_test test/differential_transmission_loader_test.cpp)
-  target_link_libraries(differential_transmission_loader_test ${PROJECT_NAME}_parser)
+  target_link_libraries(differential_transmission_loader_test ${PROJECT_NAME}_parser ${catkin_LIBRARIES})
 
   catkin_add_gtest(four_bar_linkage_transmission_loader_test test/four_bar_linkage_transmission_loader_test.cpp)
-  target_link_libraries(four_bar_linkage_transmission_loader_test ${PROJECT_NAME}_parser)
+  target_link_libraries(four_bar_linkage_transmission_loader_test ${PROJECT_NAME}_parser ${catkin_LIBRARIES})
 
   catkin_add_gtest(transmission_interface_loader_test test/transmission_interface_loader_test.cpp)
   target_link_libraries(transmission_interface_loader_test ${PROJECT_NAME}_parser
-                                                          transmission_interface_loader)
+                                                          transmission_interface_loader
+                                                          ${catkin_LIBRARIES})
 endif()
