--- a/combined_robot_hw/package.xml
+++ b/combined_robot_hw/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>combined_robot_hw</name>
   <version>0.11.1</version>
   <description>Combined Robot HW class.</description>
@@ -12,15 +12,11 @@
   <url type="repository">https://github.com/ros-controls/ros_control</url>
 
   <author>Toni Oliver</author>
-  
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>hardware_interface</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <run_depend>hardware_interface</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>roscpp</run_depend>
 
+  <buildtool_depend>catkin</buildtool_depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>roscpp</depend>
 
   <export>
   </export>
