--- a/controller_interface/package.xml
+++ b/controller_interface/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>controller_interface</name>
   <version>0.11.1</version>
   <description>Interface base class for controllers</description>
@@ -14,12 +14,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend> 
-  <build_depend>hardware_interface</build_depend> 
-  <build_depend>pluginlib</build_depend> 
-  <run_depend>roscpp</run_depend> 
-  <run_depend>hardware_interface</run_depend> 
-  <run_depend>pluginlib</run_depend> 
+  <depend>roscpp</depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
 
   <export>
     <cpp cflags="-I${prefix}/include"/>
