--- a/controller_manager_msgs/package.xml
+++ b/controller_manager_msgs/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>controller_manager_msgs</name>
   <version>0.11.1</version>
   <description>Messages and services for the controller manager.</description>
@@ -14,10 +14,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>std_msgs</build_depend>
+  <depend>std_msgs</depend>
   <build_depend>message_generation</build_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <export>
 
