--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>rqt_controller_manager</name>
   <version>0.11.1</version>
   <description>The rqt_controller_manager package</description>
@@ -18,11 +18,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>controller_manager</build_depend>
-  <build_depend>rqt_gui</build_depend>
-
-  <run_depend>controller_manager</run_depend>
-  <run_depend>rqt_gui</run_depend>
+  <depend>controller_manager</depend>
+  <depend>rqt_gui</depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml" />
