--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>transmission_interface</name>
   <version>0.11.1</version>
   <description>Transmission Interface.</description>
@@ -16,17 +16,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>tinyxml</depend>
+  <depend>roscpp</depend>
+  <depend>pluginlib</depend>
   <build_depend>hardware_interface</build_depend>
-  <build_depend>tinyxml</build_depend>
   <build_depend>cmake_modules</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>resource_retriever</build_depend> <!-- Test-only-->
 
-  <run_depend>tinyxml</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>resource_retriever</run_depend> <!-- Test-only-->
+  <test_depend>resource_retriever</test_depend>
 
   <export>
     <cpp cflags="-I${prefix}/include"/>
