--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -6,6 +6,8 @@
 
   <maintainer email="kphawkins@gatech.edu">Kelsey Hawkins</maintainer>
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</maintainer>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
 
   <license>BSD</license>
 
