--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -5,6 +5,8 @@
 
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
   <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
 
   <license>Modified BSD</license>
 
