--- a/combined_robot_hw_tests/package.xml
+++ b/combined_robot_hw_tests/package.xml
@@ -4,6 +4,8 @@
   <version>0.11.1</version>
   <description>The combined_robot_hw_tests package</description>
   <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
 
   <license>BSD</license>
 
