--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -3,6 +3,8 @@
   <version>0.11.1</version>
   <description>controller_manager_tests</description>
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
 
   <license>BSD</license>
 
