--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ language: generic
 notifications:
   email:
     recipients:
-      - davetcoleman@gmail.com
-      - adolfo.rodriguez@pal-robotics.com
+      - enrique.fernandez.perdomo@gmail.com
+      - bence.magyar.robotics@gmail.com
+      - gennaro.raiola@gmail.com
     on_success: change #[always|never|change] # default: change
     on_failure: change #[always|never|change] # default: always
 
@@ -18,7 +19,6 @@ env:
     - ROSINSTALL_FILENAME=ros_control.rosinstall
     - ROS_PARALLEL_TEST_JOBS=-j1
   matrix:
-    - ROS_DISTRO=jade    ROS_REPO=ros UPSTREAM_WORKSPACE=debian
     - ROS_DISTRO=kinetic ROS_REPO=ros
     - ROS_DISTRO=kinetic ROS_REPO=ros-shadow-fixed
     - ROS_DISTRO=lunar   ROS_REPO=ros-shadow-fixed
