--- a/joint_limits_interface/test/joint_limits_rosparam.yaml
+++ b/joint_limits_interface/test/joint_limits_rosparam.yaml
@@ -12,6 +12,10 @@ joint_limits:
     has_effort_limits: true
     max_effort: 20.0
     angle_wraparound: true # should be ignored, has position limits
+    k_position: 10.0
+    k_velocity: 20.0
+    soft_lower_limit: 0.1
+    soft_upper_limit: 0.9
 
   yinfoo_joint:
     has_position_limits: true
@@ -45,5 +49,9 @@ joint_limits:
     # Missing min_position
     max_position: 1.0
 
+  foobar_joint:
+    k_position: 10.0
+    soft_lower_limit: 0.1
+    soft_upper_limit: 0.9
 
 
