--- a/joint_limits_interface/test/joint_limits_rosparam.yaml
+++ b/joint_limits_interface/test/joint_limits_rosparam.yaml
@@ -12,6 +12,7 @@ joint_limits:
     has_effort_limits: true
     max_effort: 20.0
     angle_wraparound: true # should be ignored, has position limits
+    has_soft_limits: true
     k_position: 10.0
     k_velocity: 20.0
     soft_lower_limit: 0.1
@@ -50,6 +51,14 @@ joint_limits:
     max_position: 1.0
 
   foobar_joint:
+    has_soft_limits: false
+    k_velocity: 20.0
+    k_position: 10.0
+    soft_lower_limit: 0.1
+    soft_upper_limit: 0.9
+
+  barbaz_joint:
+    has_soft_limits: false
     k_position: 10.0
     soft_lower_limit: 0.1
     soft_upper_limit: 0.9
