--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -24,6 +24,8 @@
   <run_depend>controller_manager</run_depend>
   <run_depend>controller_interface</run_depend>
   <test_depend>rosservice</test_depend>
+  <test_depend>rosbash</test_depend>
+  <test_depend>rosnode</test_depend>
 
   <export>
     <controller_interface plugin="${prefix}/test_controllers_plugin.xml"/>
