--- a/controller_interface/package.xml
+++ b/controller_interface/package.xml
@@ -15,6 +15,8 @@
   <author>Wim Meeussen</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  
+  <build_depend>boost</build_depend>
 
   <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
