--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
     - ROS_DISTRO=kinetic ROS_REPO=ros
     - ROS_DISTRO=kinetic ROS_REPO=ros-shadow-fixed
     - ROS_DISTRO=lunar   ROS_REPO=ros-shadow-fixed
+    - ROS_DISTRO=melodic ROS_REPO=ros-shadow-fixed
 matrix:
   allow_failures:
     - env: ROS_DISTRO=lunar   ROS_REPO=ros-shadow-fixed 
