--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -19,5 +19,6 @@
   <depend>urdf</depend>
   <depend>liburdfdom-dev</depend>
 
+  <test_depend>rosunit</test_depend>
   <test_depend>rostest</test_depend>
 </package>
