--- a/hardware_interface/package.xml
+++ b/hardware_interface/package.xml
@@ -17,5 +17,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
-  <test_depend>rosconsole</test_depend>
+  <test_depend>rostest</test_depend>
+  <test_depend>rosunit</test_depend>
 </package>
