--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -24,6 +24,7 @@
   <build_depend>hardware_interface</build_depend>
   <build_depend>cmake_modules</build_depend>
 
+  <test_depend>rosunit</test_depend>
   <test_depend>resource_retriever</test_depend>
 
   <export>
