--- a/combined_robot_hw/package.xml
+++ b/combined_robot_hw/package.xml
@@ -3,9 +3,10 @@
   <name>combined_robot_hw</name>
   <version>0.14.1</version>
   <description>Combined Robot HW class.</description>
-  <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
+  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
 
   <license>BSD</license>
 
