--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -2,9 +2,9 @@
   <name>controller_manager_tests</name>
   <version>0.14.1</version>
   <description>controller_manager_tests</description>
-  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
+  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
 
   <license>BSD</license>
 
