--- a/ros_control/package.xml
+++ b/ros_control/package.xml
@@ -3,10 +3,9 @@
   <version>0.14.0</version>
   <description>A set of packages that include controller interfaces, controller managers, transmissions and hardware_interfaces.</description>
 
-  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
-  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
+  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
 
   <license>BSD</license>
 
