--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -16,10 +16,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>liburdfdom-dev</build_depend>
+  <build_depend>urdf</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>hardware_interface</run_depend>
   <run_depend>liburdfdom-dev</run_depend>
+  <run_depend>urdf</run_depend>
 
   <export>
     <cpp cflags="-I${prefix}/include"/>
