--- a/combined_robot_hw/package.xml
+++ b/combined_robot_hw/package.xml
@@ -18,6 +18,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>hardware_interface</depend>
-  <depend>pluginlib</depend>
+  <depend version_gte="1.11.2">pluginlib</depend>
   <depend>roscpp</depend>
 </package>
