--- a/controller_interface/package.xml
+++ b/controller_interface/package.xml
@@ -17,6 +17,6 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>hardware_interface</depend>
-  <depend>pluginlib</depend>
+  <depend version_gte="1.11.2">pluginlib</depend>
   <depend>roscpp</depend>
 </package>
