add minimum required pluginlib version

--- a/controller_interface/package.xml
+++ b/controller_interface/package.xml
@@ -14,12 +14,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend> 
-  <build_depend>hardware_interface</build_depend> 
-  <build_depend>pluginlib</build_depend> 
-  <run_depend>roscpp</run_depend> 
-  <run_depend>hardware_interface</run_depend> 
-  <run_depend>pluginlib</run_depend> 
+  <build_depend>roscpp</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend version_gte="1.10.7">pluginlib</build_depend> 
+  <run_depend>roscpp</run_depend>
+  <run_depend>hardware_interface</run_depend>
+  <run_depend version_gte="1.10.7">pluginlib</run_depend>
 
   <export>
     <cpp cflags="-I${prefix}/include"/>
