--- a/hardware_interface/CMakeLists.txt
+++ b/hardware_interface/CMakeLists.txt
@@ -11,8 +11,9 @@ catkin_package(
 
 if(CATKIN_ENABLE_TESTING)
 
-  find_package(rostest REQUIRED)
-  include_directories(${catkin_INCLUDE_DIRS} include)
+  find_package(catkin REQUIRED COMPONENTS rosconsole) 
+  include_directories(SYSTEM ${catkin_INCLUDE_DIRS})
+  include_directories(include)
 
   catkin_add_gtest(hardware_resource_manager_test  test/hardware_resource_manager_test.cpp)
   target_link_libraries(hardware_resource_manager_test ${catkin_LIBRARIES})
