Use both ros and ros-testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
     - ROSINSTALL_FILENAME=ros_control.rosinstall
     - ROS_PARALLEL_TEST_JOBS=-j1
   matrix:
+    - ROS_DISTRO=melodic ROS_REPO=ros
     - ROS_DISTRO=melodic ROS_REPO=ros-testing
 
 install:
