--- a/controller_interface/package.xml
+++ b/controller_interface/package.xml
@@ -1,7 +1,7 @@
 <package format="2">
   <name>controller_interface</name>
   <version>0.15.1</version>
-  <description>Interface base class for controllers</description>
+  <description>Interface base class for controllers.</description>
 
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
