--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -1,7 +1,7 @@
 <package format="2">
   <name>controller_manager_tests</name>
   <version>0.15.1</version>
-  <description>controller_manager_tests</description>
+  <description>Tests for the controller manager.</description>
 
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
