--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -1,7 +1,7 @@
 <package format="2">
   <name>rqt_controller_manager</name>
   <version>0.15.1</version>
-  <description>The rqt_controller_manager package</description>
+  <description>Graphical frontend for interacting with the controller manager.</description>
 
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
