Test downstream ros_controllers in every config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,15 @@ on:
 jobs:
   industrial_ci:
     runs-on: ubuntu-latest
+    env:
+      # Test downstream package ros_controllers
+      UPSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -ros_controllers'
+      DOWNSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -realtime_tools -control_toolbox -control_msgs'
     strategy:
       matrix:
         env:
           - {ROS_DISTRO: noetic, ROS_REPO: main}
           - {ROS_DISTRO: noetic, ROS_REPO: testing}
-          - {ROS_DISTRO: noetic,
-             UPSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -ros_controllers',
-             DOWNSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -realtime_tools -control_toolbox -control_msgs'}
     steps:
       - run: sudo apt-get update -qq && sudo apt-get upgrade
       - uses: actions/checkout@v1
